@@ -1,3 +1,8 @@
+2011-03-30  Corinna Vinschen  <corinna@vinschen.de>
+
+	* times.cc (hires_ms::resolution): Make sure resolution is never 0.
+	(clock_setres): Ditto.
+
 2011-03-29  Corinna Vinschen  <corinna@vinschen.de>
 
 	* cygtls.h (struct _local_storage): Redefine process_ident as wchar_t
